# SynthLab

./: .gitignore  CMakeLists.txt  SynthLab.jucer
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: Main.cpp  MainComponent.h  stdafx.h
Source/Core/: Singleton.h
Source/Core/Log/: LogAppender.cpp  LogAppender.h  LogTableListBoxModel.h  LogWindow.cpp  LogWindow.h
Sources/: AudioApp.cpp  AudioApp.h  AudioAppDemo.cpp  AudioAppDemo.h  CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  SynthLab.cpp  SynthLab.h  SynthLabApplication.cpp  SynthLabApplication.h  stdafx.h
Sources/CUDA/: CMakeLists.txt  CudaHeader.cuh  CudaSource.cu
Sources/Core/: GlobPropsFile.cpp  GlobPropsFile.h
Sources/Core/Log/: CMakeLists.txt  LogMain.cpp  LogMain.h  LogRecord.cpp  LogRecord.h  LogStorage.cpp  LogStorage.h  LogTableListBoxModel.cpp  LogTableListBoxModel.h  LogWindow.cpp  LogWindow.h
